remove cobra, cleanup project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.testdata
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,vim,git,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,macos,vim,git,go
