--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+*.env
 .testdata
+bin/
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,vim,git,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,macos,vim,git,go
