--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.env
 .testdata
 bin/
+dist/
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,vim,git,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,macos,vim,git,go
