--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,9 +34,7 @@ changelog:
       - '^docs:'
       - '^test:'
 dockers:
-  - goos: linux
-    goarch: amd64
-    use: docker
+  - use: docker
     dockerfile: Dockerfile
     image_templates:
     - "gchr.io/robherley/shallow-fetch-sha:{{.Version}}"
