--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,15 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
-      - name: Run tests with Ginkgo
+      - name: Setup ssh
         run: |
           ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          mkdir ~/.ssh/
+          chmod 700 ~/.ssh/
           ssh-keyscan github.com >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
+      - name: Run tests with Ginkgo
+        run: |
           go install github.com/onsi/ginkgo/ginkgo@latest
           ginkgo -r
         env:
