--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,14 @@ jobs:
           chmod 700 ~/.ssh/
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       - name: Run tests with Ginkgo
         run: |
           go install github.com/onsi/ginkgo/ginkgo@latest
           ginkgo -r
         env:
           ACK_GINKGO_RC: 'true'
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
           SSH_PEM_NO_PASS: ${{ secrets.SSH_PEM_NO_PASS }}
           SSH_PEM_WITH_PASS: ${{ secrets.SSH_PEM_WITH_PASS }}
