make user ssh dir

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
           go-version: 1.17
       - name: Set up known hosts for SSH tests
         run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
           ./script/generate_known_hosts
           mv ssh_known_hosts ~/.ssh/known_hosts
       - name: Run tests with Ginkgo
